@@ -96,7 +96,7 @@ add_preprocessor_define(char *define)
 	{
 		char	   *tmp;
 
-		/* symbol gets a value */
+		/* symbol has a value */
 		for (tmp = ptr - 1; *tmp == ' '; tmp--);
 		tmp[1] = '\0';
 		defines->old = define_copy;
@@ -105,9 +105,10 @@ add_preprocessor_define(char *define)
 	else
 	{
 		defines->old = define_copy;
-		defines->new = mm_strdup("");
+		defines->new = mm_strdup("1");
 	}
 	defines->pertinent = true;
+	defines->used = NULL;
 	defines->next = pd;
 }
 
